--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -108,7 +108,7 @@
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
-  font-family: var(--font-mono);
+  /* font-family: var(--font-mono); */
 }
 .headerButton {
   color: #ffffff;
