--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -214,7 +214,10 @@
   border: 1px solid #ffffff;
   border-radius: 4px;
 }
-
+.displayCenter{
+  display:"flex";
+  justify-content: center;
+}
 /* media queries for mobile screen */
 
 @media (max-width: 580px) {
